--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'maven-publish'
 	id 'org.springframework.boot' version '3.3.2'
 	id 'io.spring.dependency-management' version '1.1.6'
 }
@@ -30,4 +31,23 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+			versionMapping {
+				allVariants {
+					fromResolutionOf("runtimeClasspath")
+				}
+			}
+			groupId 'com.sevenhallo'
+			artifactId 'multi-tenant'
+			version '0.0.1-SNAPSHOT'
+		}
+	}
+	repositories {
+		mavenLocal()
+	}
 }
